--- a/M01S03/ex01/index.html
+++ b/M01S03/ex01/index.html
@@ -10,11 +10,15 @@
       var object = {
         name: 'Dragos', 
         surname: 'Iordache', 
-        age: 32
+        age: 32,
+        carOwner: false,
+        
       };
 
-      console.log(object);
-      console.log(object.name);
+      console.log('Ma numesc ' + object.name + ' ' + object.surname + ' si am ' + object.age + ' ani.');
+
+      console.log(2019 - (object.age / 2));
+      console.log(2019 - (object.age));
     </script>
   </body>
 </html>
