--- a/M01S03/ex04/index.html
+++ b/M01S03/ex04/index.html
@@ -5,6 +5,19 @@
     <title>Arrays 01</title>
   </head>
   <body>
+    <script>
+      var myArray = [1 ,2 ,3 ,4 ,5 ,6 ];
+
+      console.log(myArray[0]);
+      console.log(myArray[5]);
+      console.log(myArray[2]);
+      console.log(myArray[3]);
+      console.log(myArray.length - myArray[5]);
+      console.log(myArray[1]+ myArray[3]);
+      console.log(myArray[0] * myArray[5]);
+      console.log(myArray[3] - myArray[4]);
+      console.log(Math.pow(myArray[5], myArray[3]));
+      </script>
 
   </body>
 </html>
