--- a/M01S05/ex08/index.html
+++ b/M01S05/ex08/index.html
@@ -5,8 +5,10 @@
     <title>Anonymous Functions</title>
 </head>
 <body>
-   
-    
+   <button id="clicker">clicker</button>
+    <button id="removeEventButton">Eliminate</button>
+    <button id="query">Query</button>
+    <p id="message"></p>
     <script src="app.js"></script>
 </body>
 </html>
