--- a/M01S06/ex05/index.html
+++ b/M01S06/ex05/index.html
@@ -8,6 +8,8 @@
   
   <button id="showButton">Afiseaza alerta.</button>
   <button id="toggleEventButton">Opreste Afisarea</button>
+
+  <button id="removeButtons">remove</button>
   <script src="app.js"></script>
 </body>
 </html>
