--- a/M02S03/ex04/index.html
+++ b/M02S03/ex04/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <title>DOM Events - load</title>        
+  <meta charset="utf-8">
+  <title>DOM Events - load</title>
 
 </head>
-<body>
 
+<body>
+  <p id="toaster">The image is loading</p>
+  
   <img src="http://lorempixel.com/output/food-q-c-350-350-7.jpg" class="image">
 
   <script src="app.js"></script>
 </body>
+
 </html>
