--- a/M02S04/ex01/index.html
+++ b/M02S04/ex01/index.html
@@ -19,7 +19,8 @@
 <body>
   
   <div class="box"></div>
-
+  <button id="applyButton">Aplica</button>
+<button id="darkenButton">hit it</button>
   <script src="app.js"></script>
 </body>
 </html>
