--- a/M02S03/ex05/index.html
+++ b/M02S03/ex05/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <title>DOM Events - resize</title>        
+  <meta charset="utf-8">
+  <title>DOM Events - resize</title>
 
 </head>
+
 <body>
-
-
+  <script>module = {};</script>
+  <script src="./../../node_modules/lodash.debounce/index.js"></script>
   <script src="app.js"></script>
 </body>
+
 </html>
